[FIX] 모달창 z-index 최상위로 설정

--- a/src/components/styles/landing-page-modal-window.css
+++ b/src/components/styles/landing-page-modal-window.css
@@ -24,6 +24,7 @@
   top: 10rem;
   width: 540px;
   word-break: keep-all;
+  z-index: 999;
 
   .pre-announcement-title {
     margin-block-end: 1rem;
